tests/reference/asr_preprocess-cpp5-482c649.stderr
warning: Implied save feature
 --> tests/errors/cpp5.f90:3:1
  |
3 | #include "cpp5.h"
  | ^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/cpp5.f90:3:1
  |
3 | #include "cpp5.h"
  | ^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Variable 'z12345678' is not declared
 --> tests/errors/cpp5.f90:5:13
  |
5 | print *, x, C123
  |             ^^^^ 'z12345678' is undeclared
